# torch_mentor

./: .gitignore  LICENSE  Makefile  README.md  llms.txt  pyproject.toml  setup.py
.claude/: DESIGN.md  settings.json  settings.local.json
.github/workflows/: tests.yml
badges/: coverage.json
docs/: cli.md  conf.py  contributing.md  curriculum_learning.md  index.md  quickstart.md  requirements.txt
docs/api/: index.md  mentee.md  reporting.md  trainers.md
docs/examples/: cifar.md  hf.md  index.md
examples/binarization/: bunet.py  dibco_ds.py  requirements.txt
examples/cifar/: README.md  train_cifar.py  train_cifar_classifier.py  train_cifar_resnet56.py
examples/hf/: README.md  classify.py  requirements.txt  train_mobilenet_cifar10.py  train_mobilenetv2_cifar10.py
mentor/: __init__.py  adapters.py  mentee.py  modalities.py  reporting.py  resume.py  trainers.py
src/mentor/: __init__.py  classification.py  datasets.py  evaluation.py  restore.py  util.py
tests/: conftest.py  helpers.py
tests/checkpoint/: test_device.py  test_inference_state.py
tests/cli/: test_entrypoints.py  test_resume.py
tests/integration/: test_resume.py  test_training_loop.py
tests/unit_testing/: test_coverage.py  test_freeze_unfreeze.py  test_mentee.py  test_modalities.py  test_readme.py  test_reporting.py  test_select_layers.py  test_trainers.py  test_wrap_as_mentee.py
