[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    '^\s*def main_',
]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes: undefined names, unused imports, etc.
    "I",   # isort: import order
    "UP",  # pyupgrade: modernise syntax for the target Python version
    "B",   # flake8-bugbear: likely bugs and design issues
]
ignore = [
    "E221", "E222",  # allow aligned assignments
]
